	PR c++/18925 	* class.c (layout_class_type): Determine the visibility of static 	data members.

PR c++/18925
	* g++.dg/ext/visibility/staticdatamem.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@92120 138bc75d-0d04-0410-961f-82ee72b054a4